--- a/StardewChatter.csproj
+++ b/StardewChatter.csproj
@@ -8,4 +8,11 @@
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="promptTemplate.txt" />
+    <EmbeddedResource Include="promptTemplate.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
