Begin refactor for gpt-3.5-turbo support

--- a/StardewChatter.csproj
+++ b/StardewChatter.csproj
@@ -15,7 +15,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <None Remove="requestTemplate.json" />
-    <EmbeddedResource Include="requestTemplate.json">
+    <EmbeddedResource Include="davinci-requestTemplate.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
