--- a/turbo-requestTemplate.json
+++ b/turbo-requestTemplate.json
@@ -1,11 +1,6 @@
 {
   "model": "gpt-3.5-turbo",
-  "messages" : [
-    {
-        "role" : "system",
-        "content" : "You are engaging in a roleplay as a character in Stardew Valley"
-    }
-  ],
+  "messages" : [],
   "temperature": 0.9,
   "max_tokens": 75,
   "top_p": 1,
