--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,6 @@
 	"UniqueID": "Me.StardewChatter",
 	"EntryDll": "StardewChatter.dll",
 	"MinimumApiVersion": "3.0.0",
-	"UpdateKeys": []
+	"UpdateKeys": [],
+	"AiModel" : "default"
 }
