--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,6 @@
 	"EntryDll": "StardewChatter.dll",
 	"MinimumApiVersion": "3.0.0",
 	"UpdateKeys": [],
-	"AiModel" : "default"
+	"AiModel" : "davinci",
+	"ApiUrl": "https://starchatter.netlify.app/api/stardewChat"
 }
