Get auth status and popcorn balance on chat window open

--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,6 @@
 	"MinimumApiVersion": "3.0.0",
 	"UpdateKeys": [],
 	"AiModel" : "default",
-	"ApiUrl": "https://starchatter.netlify.app/api/stardewChat"
+	"WebRoot": "https://starchatter.netlify.app",
+	"ApiRoot": "https://starchatter.netlify.app/api"
 }
