--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-	"Name": "StardewChatter",
-	"Author": "Me",
+	"Name": "CharaChatSV",
+	"Author": "Man of Corn",
 	"Version": "0.2.0",
 	"Description": "Deeper conversations with the other inhabitants of Stardew Valley",
-	"UniqueID": "Me.StardewChatter",
-	"EntryDll": "StardewChatter.dll",
+	"UniqueID": "ManOfCorn.CharaChatSV",
+	"EntryDll": "CharaChatSV.dll",
 	"MinimumApiVersion": "3.0.0",
 	"UpdateKeys": [],
 	"AiModel" : "default",
-	"WebRoot": "https://starchatter.netlify.app",
-	"ApiRoot": "https://starchatter.netlify.app/api"
+	"WebRoot": "https://chara.chat",
+	"ApiRoot": "https://chara.chat/api"
 }
