Add token encryption

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
 	"Name": "CharaChatSV",
 	"Author": "Man of Corn",
-	"Version": "0.2.0",
+	"Version": "1.0.0",
 	"Description": "Deeper conversations with the other inhabitants of Stardew Valley",
 	"UniqueID": "ManOfCorn.CharaChatSV",
 	"EntryDll": "CharaChatSV.dll",
 	"MinimumApiVersion": "3.0.0",
 	"UpdateKeys": [],
 	"AiModel" : "default",
-	"WebRoot": "https://chara.chat",
-	"ApiRoot": "https://chara.chat/api"
+	"WebRoot": "http://localhost:8888",
+	"ApiRoot": "http://localhost:8888/api"
 }
