More child interaction fixes, add changelog

--- a/CharaChatSV.csproj
+++ b/CharaChatSV.csproj
@@ -13,6 +13,9 @@
     <EmbeddedResource Include="assets/*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="changelog.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   
 </Project>
